<resources>
    <string name="app_name">Aplicația mea</string>

    <!--AdvanceFileUpload-->
    <string name="file_upload_no_file">Fișier inexistent</string>
    <string name="file_upload_choose">Alege un fișier</string>
    <string name="file_upload_allow_permission">Avem nevoie de permisiunea dumneavoastră</string>
    <string name="file_upload_permission_success">Permisiune acodată cu succes</string>
    <string name="file_upload_permission_not">Permisiune respinsă</string>
    <string name="file_upload_file_uploaded">Fișier încărcat</string>
    <string name="file_upload_file_upload_fail">Fișierul nu a putut fi încărcat</string>

    <!--FormAdaptor-->
    <string name="form_adaptor_download_disponibility">Disponibil pentru descărcare</string>
    <string name="form_adaptor_download_indisponibility">Indisponibil</string>
    <string name="form_adaptor_name_file">Nume: </string>
    <string name="form_adaptor_date">Data la care a fost încărcat: </string>

    <!--IndexAdaptor-->
    <string name="index_adaptor_value">Valoare index: </string>
    <string name="index_adaptor_date">Data index: </string>
    <string name="index_adaptor_consumption">Consum mediu: </string>

    <!--IndexFragment-->
    <string name="index_fragment_invalid_index">Indexul se introduce între 20 și 25</string>
    <string name="index_fragment_invalid">Invalid</string>
    <string name="index_fragment_success">Succes</string>
    <string name="index_fragment_correct_value">Introduceți corect valoarea indexului</string>

    <!--InvoiceAdaptor-->
    <string name="invoice_adaptor_invoice_number">Numar facură: </string>
    <string name="invoice_adaptor_to_paid">Total de plată: </string>
    <string name="invoice_adaptor_due_date">Dată scadentă: </string>
    <string name="invoice_adaptor_invoice_payed">Status factură: Plătită</string>
    <string name="invoice_adaptor_invoice_not_payed">Status factură: Neplătită </string>
    <string name="invoice_adaptor_already_payed">Factura este deja plătită </string>
    <string name="invoice_adaptor_ok" translatable="false">Ok </string>

    <!--InvoiceDetailsFragment-->
    <string name="invoice_detail_please_wait">Vă rog să așteptați</string>
    <string name="invoice_detail_email_send">Emailul a fost trimis</string>
    <string name="invoice_detail_server_error">Eroare de server</string>

    <!--Payments-->
    <string name="payment_please_wait">Vă rog să așteptați</string>
    <string name="payment_pay_order">Ordin-de-plată</string>

    <!--ProfileFragment-->
    <string name="profile_individual_person">Persoană fizică</string>
    <string name="profile_cnp" translatable="false">CNP</string>
    <string name="profile_cui" translatable="false">CUI</string>
    <string name="profile_company_name">Numele companiei</string>
    <string name="profile_saved_modify">Modificări salvate</string>
    <string name="profile_error1">Eroare de retea</string>
    <string name="profile_error2">Email incorect</string>
    <string name="profile_error3">Număr de telefon incorect</string>
    <string name="profile_error4">Câmpuri necompletate</string>

    <!--SearchDateFragment-->
    <string name="search_date_fragment_invalid_dates">Date invalide...</string>
    <string name="search_date_fragment_from">De la: </string>
    <string name="search_date_fragment_until">Până la: </string>

    <!--HomeFragment-->
    <string name="home_fragment_isPaid_true">Plătită</string>
    <string name="home_fragment_isPaid_false">Neplătită</string>
    <string name="home_fragment_invoice_number">Număr factură: </string>
    <string name="home_fragment_invoice_to_pay">valoare: </string>
    <string name="home_fragment_invoice_date">dată scadentă: </string>

    <!--LogIn-->
    <string name="login_save_toast">Salvat!</string>
    <string name="login_connect_toast">Conectare...</string>

    <!--activity_advance_file_upload-->
    <string name="activity_file_upload_choose">Alege un fișier</string>
    <string name="activity_file_upload_no_file">Nici un fișier selectat</string>
    <string name="activity_file_upload_upload_button">Încarcă</string>

    <!--activity_datepicker.xml-->
    <string name="datetime_picker_save_button">Salvează</string>

    <!--activity_log_in.xml-->
    <string name="log_in_enter_username">Cont de utilizator</string>
    <string name="log_in_enter_password">Parolă</string>
    <string name="log_in_save_me">Ține-mă minte!</string>
    <string name="log_in_remember_me">Reamintește-mă!</string>
    <string name="log_in_enter_button">Autentificare</string>

    <!--custom_alert_dialog.xml-->
    <string name="alert_dialog_info">Autentificare eșuată. Ați introdus greșit datele de logare.</string>
    <string name="alert_dialog_quit_button">Renunță</string>
    <string name="alert_dialog_try_again_button">Reîncarcă</string>

    <!--custom_network_dialog.xml-->
    <string name="network_dialog_info">Eroare neașteptată</string>
    <string name="network_dialog_quit_button">Renunță</string>
    <string name="network_dialog_try_again_button">Reîncarcă</string>

    <!--edit_profile_popup-->
    <string name="edit_profile_title">Editare date</string>
    <string name="edit_profile_phone_number">Număr de telefon</string>
    <string name="edit_profile_email_address">Adresă de email</string>
    <string name="edit_profile_update">Actualizare</string>

    <!--fragment_home_page.xml-->
    <string name="fragment_home_address_spinner_announcement">Locație: </string>
    <string name="fragment_home_total_sold" translatable="false">Sold</string>
    <string name="fragment_home_pay_button">Platește</string>
    <string name="fragment_home_last_invoices">Ultimele facturi ale acestui cont:</string>
    <string name="fragment_home_company_details_title" translatable="false">TotalSoft SA.</string>
    <string name="fragment_home_company_details_address">Soseaua Bucuresti Nord nr 8-10, etaj 8</string>
    <string name="fragment_home_company_detail_email" translatable="false">totalsoft@ts.ro</string>

    <!--fragment_index_page-->
    <string name="index_hint">Introduceți valoarea indexului</string>

    <!--fragment_invoice_details-->
    <string name="invoice_detail_email_me_button">Trimite factura pe email</string>
    <string name="invoice_detail_first_border">Detalii factură</string>
    <string name="invoice_detail_invoiceId_intro">Cod factură</string>
    <string name="invoice_detail_issue_date_intro">Dată emitere</string>
    <string name="invoice_detail_due_date_intro">Dată scadentă</string>
    <string name="invoice_detail_all_pay_intro">Total de plată</string>
    <string name="invoice_detail_remaining_balance_intro">Sold restant</string>
    <string name="invoice_detail_second_border">Detalii client</string>
    <string name="invoice_detail_accountId_intro">Cod utilizator</string>
    <string name="invoice_detail_billing_address_intro">Adresă de facturare</string>
    <string name="invoice_detail_third_border">Detalii preț</string>
    <string name="invoice_detail_unit_measurement_intro">Unitate de măsură</string>
    <string name="invoice_detail_price_unit_intro">Prețul per unitate</string>
    <string name="invoice_detail_quantity_consumed_intro">Cantitate consumată</string>
    <string name="invoice_detail_tva_intro">TVA</string>
    <string name="invoice_detail_price_without_tva_intro">Preț fără TVA</string>
    <string name="invoice_detail_price_with_tva_intro">Preț cu TVA</string>
    <string name="invoice_detail_fourth_border">Detalii furnizor</string>
    <string name="invoice_detail_cui_intro" translatable="false">CUI</string>
    <string name="invoice_detail_issue_address_intro">Adresă</string>

    <!--fragment_invoice_page-->
    <string name="invoices_unpaid_button">Facturi neplătite</string>
    <string name="invoices_all_button">Toate facturile</string>
    <string name="invoices_paid_button">Facturi plătite</string>
    <string name="invoices_search_by_date_button">Caută după dată</string>

    <!--fragment_profile_page-->
    <string name="profile_user_code_intro">Cod client:</string>
    <string name="profile_name_intro">Nume:</string>
    <string name="profile_email_intro" translatable="false">Email:</string>
    <string name="profile_phone_intro">Telefon:</string>
    <string name="profile_edit_button">Editare</string>

    <!--fragment_data.xml-->
    <string name="fragment_date_start">[Începând cu data ...]</string>
    <string name="fragment_date_end">[Până la data ...]</string>

    <!--index_alert_dialog-->
    <string name="index_alert_dialog_detail">Indexul se poate introduce doar între 20 și 25 ale lunii</string>
    <string name="index_alert_dialog_home_button">Acasă</string>
    <string name="index_alert_dialog_watch_button">Vizualizează</string>

    <!--bottom_nav_menu-->
    <string name="nav_menu_index" translatable="false">Index</string>
    <string name="nav_menu_form">Formulare</string>
    <string name="nav_menu_home">Acasă</string>
    <string name="nav_menu_invoice">Facturi</string>
    <string name="nav_menu_profile">Profil</string>

</resources>