<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:background="@color/White"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/editProfile"
        android:text="@string/edit_profile_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editPhone"
        android:inputType="text"
        android:layout_below="@+id/editProfile"
        android:hint="@string/edit_profile_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editMail"
        android:inputType="text"
        android:layout_below="@+id/editPhone"
        android:hint="@string/edit_profile_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/saveProfile"
            android:layout_below="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/edit_profile_update"
            android:background="@color/Grey" />
    </RelativeLayout>
</LinearLayout>