<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="#fff"
            android:background="@color/BlueViolet"
            android:layout_weight="1"
            android:text="@string/activity_file_upload_choose"
            android:id="@+id/select_from_all_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:padding="5dp"
            android:id="@+id/all_file_name"
            android:text="@string/activity_file_upload_no_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:textColor="#fff"
        android:background="@color/BlueViolet"
        android:layout_marginTop="10dp"
        android:text="@string/activity_file_upload_upload_button"
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>