<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewError"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/error" />
            <TextView
                android:id="@+id/text_alert"
                android:layout_below="@id/imageViewError"
                android:text="@string/alert_dialog_info"
                android:layout_marginTop="23dp"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/button_cancel"
                android:layout_below="@id/text_alert"
                android:text="@string/alert_dialog_quit_button"
                android:layout_marginTop="23dp"
                android:textColor="@color/CadetBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_reload"
                android:layout_below="@id/text_alert"
                android:text="@string/alert_dialog_try_again_button"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="23dp"
                android:textColor="@color/CadetBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>