<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"
    tools:context=".Activities.Invoice.InvoicesFragment">

        <LinearLayout
            android:id="@+id/firstbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:stretchMode="spacingWidthUniform">
            <Button
                android:id="@+id/unpayedInvoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoices_unpaid_button"
                android:gravity="right"
                android:background="@drawable/button_invoices"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_gravity="start|top"
                android:textSize="@dimen/invoices_button_text"
                android:fontFamily="@font/cherry_swash"/>

            <Button
                android:id="@+id/allInvoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_invoices"
                android:fontFamily="@font/cherry_swash"
                android:textSize="@dimen/invoices_button_text"
                android:text="@string/invoices_all_button"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/firstbuttons">
            <Button
                android:id="@+id/payedInvoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoices_paid_button"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/button_invoices"
                android:textSize="@dimen/invoices_button_text"
                android:fontFamily="@font/cherry_swash"/>

            <Button
                android:id="@+id/afterdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_invoices"
                android:fontFamily="@font/cherry_swash"
                android:textSize="@dimen/invoices_button_text"
                android:text="@string/invoices_search_by_date_button"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    <FrameLayout
        android:id="@+id/dataFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondbuttons"
        android:name="com.example.myapplication1.Activities.SearchDateFragment"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_recycleview_top"
        android:background="@drawable/row_border"
        android:layout_marginRight="@dimen/profile_margin_leftright"
        android:layout_marginLeft="@dimen/profile_margin_leftright"
        android:id="@+id/invoiceRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below= "@id/dataFragment"/>
</RelativeLayout>