<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgrlogin"
    tools:context=".Activities.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:rowCount="7"
        android:orientation="horizontal"
        android:columnOrderPreserved="false"
        android:layout_marginTop="@dimen/profile_margin_top"
        android:layout_marginRight="@dimen/profile_margin_leftright"
        android:layout_marginLeft="@dimen/profile_margin_leftright"
        android:background="@drawable/profile_border"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:text="@string/profile_user_code_intro"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />
        <TextView
            android:id="@+id/accoundId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize"
            android:text="@string/profile_name_intro" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />

        <TextView
            android:id="@+id/companyname_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />
        <TextView
            android:id="@+id/companyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:textSize="@dimen/profil_textsize"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/personalCOD_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />
        <TextView
            android:id="@+id/personalCOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize"
            android:text="@string/profile_email_intro" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="4"
            android:layout_column="1"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize"
            android:text="@string/profile_phone_intro" />
        <TextView
            android:id="@+id/telephonNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_home_button"
            android:layout_marginRight="@dimen/profile_margin_top"
            android:fontFamily="@font/cherry_swash"
            android:layout_row="5"
            android:layout_column="1"
            android:textColor="@color/black"
            android:textSize="@dimen/profil_textsize" />

    </GridLayout>
    </LinearLayout>
</ScrollView>